--- a/css/modal.css
+++ b/css/modal.css
@@ -60,3 +60,21 @@ input:checked + .slider:before {
 .slider.round:before {
   border-radius: 50%;
 }
+
+.error {
+  display: none;
+  padding: 20px;
+  margin: 20px 0;
+  border: 1px solid #f00;
+  color: #f00;
+  text-align: center;
+}
+
+.errormodal {
+  display: none;
+  padding: 20px;
+  margin: 20px 0;
+  border: 1px solid #f00;
+  color: #f00;
+  text-align: center;
+}
